--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: java
 jdk:
   - oraclejdk8
 before_install:
-  - cd app
+  - cd MaterialToastSwing
 script: mvn clean verify
 sudo: disable 
