--- a/MaterialToastSwing/pom.xml
+++ b/MaterialToastSwing/pom.xml
@@ -15,9 +15,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.vincenzopalazzo</groupId>
+            <groupId>io.github.vincenzopalazzo</groupId>
             <artifactId>material-ui-swing</artifactId>
-            <version>v0.9.4.5</version>
+            <version>1.1.1_pre-release_6.1</version>
         </dependency>
     </dependencies>
 
